--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,11 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 * {
